# project_euler

./: .gitignore  LICENSE  flake.nix  project-euler.cabal
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
app/: Main.hs
src/: Answers.hs
